--- a/part4/Blog List/package.json
+++ b/part4/Blog List/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "@stylistic/eslint-plugin-js": "^2.3.0",
     "eslint": "^9.7.0",
     "globals": "^15.8.0",
+    "lodash": "^4.17.21",
     "nodemon": "^3.1.4"
   }
 }
