Enable Toggle ability for blog form (Ex 5.5 - 5.6)   - Implement Toggle component   - Change the form for creating blog posts so it is only displayed when appropriate   - Separate the form for creating a new blog into its own component

--- a/part5/Blog List/bloglist-backend/package.json
+++ b/part5/Blog List/bloglist-backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "prod": "cross-env NODE_ENV=production nodemon index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "build:ui":"rm -rf dist && cd ../bloglist-frontend && npm run build && cp -r dist ../bloglist-backend",
     "lint": "eslint .",
     "test": "cross-env NODE_ENV=test node --test --test-concurrency=1",
     "test:only": "node --test --test-only"
