--- a/part7/redux-bloglist/bloglist-frontend/package.json
+++ b/part7/redux-bloglist/bloglist-frontend/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "axios": "^1.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
@@ -23,7 +26,6 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "@vitest/coverage-v8": "^2.1.0",
-    "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
