--- a/part7/query-bloglist/bloglist-frontend/package.json
+++ b/part7/query-bloglist/bloglist-frontend/package.json
@@ -11,13 +11,9 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
@@ -27,12 +23,12 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "@vitest/coverage-v8": "^2.1.0",
+    "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-vitest-globals": "^1.5.0",
     "jsdom": "^25.0.0",
-    "prettier": "3.3.3",
     "vite": "^4.4.5",
     "vitest": "^2.1.0"
   }
