--- a/part7/redux-bloglist/bloglist-frontend/package.json
+++ b/part7/redux-bloglist/bloglist-frontend/package.json
@@ -14,8 +14,10 @@
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
