(Ex 8.13 - 8.16 ) - Change the app so that it saves data to a database.
  8.13 - Change the library application so that it saves the data to a database.
  8.14 - Complete the program so that all queries (to get allBooks working
         with the parameter author and bookCount field of an author object
         is not required) and mutations work.
  8.15 - Complete the program so that database validation errors
        (e.g. book title or author name being too short) are handled sensibly.
  8.16 - Add user management to your application.

--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -7,5 +7,10 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose-unique-validator": "^4.0.1"
+  }
 }
