--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -4,14 +4,25 @@
   "main": "library-backend.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"node library-backend.js"
+    "dev": "node library-backend.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@apollo/server": "^4.10.0",
+    "@graphql-tools/schema": "^10.0.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "graphql": "^16.8.1",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose-unique-validator": "^4.0.1"
+    "mongoose-unique-validator": "^4.0.1",
+    "ws": "^8.18.0"
+  },
+  "overrides": {
+    "graphql": "^16.8.1"
   }
 }
