--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -13,6 +13,7 @@
     "@apollo/server": "^4.10.0",
     "@graphql-tools/schema": "^10.0.8",
     "cors": "^2.8.5",
+    "dataloader": "^2.2.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "graphql": "^16.8.1",
