--- a/part9/exerciseCalculator/package.json
+++ b/part9/exerciseCalculator/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "bmicalculator",
+  "name": "part9",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "calculateBmi": "ts-node bmiCalculator.ts",
-    "start": "ts-node index.ts",
-    "dev": "ts-node-dev index.ts",
+    "exerciseCalc": "ts-node exerciseCalculator.ts",
     "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1",
     "node-ts": "^6.1.3",
     "ts-node": "^10.9.2"
   },
