(Ex 9.7) - WebExercises   - Add an endpoint to your app for the exercise calculator.   - It should be used by doing a HTTP POST request to the endpoint http://localhost:3003/exercises

--- a/part9/exerciseCalculator/package.json
+++ b/part9/exerciseCalculator/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "exerciseCalc": "ts-node exerciseCalculator.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^4.21.1",
     "node-ts": "^6.1.3",
     "ts-node": "^10.9.2"
   },
