--- a/part9/Patientor/backend/package.json
+++ b/part9/Patientor/backend/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "dev":"ts-node-dev index.ts",
-    "lint":"eslint .",
-    "start":"node build/index.js"
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint .",
+    "start": "node build/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@stylistic/eslint-plugin": "^2.11.0",
+    "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
     "eslint": "^9.15.0",
@@ -22,6 +23,7 @@
     "typescript-eslint": "^8.15.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1"
   }
 }
